--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mkglaw",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor",
+    "prestart": "meteor npm install --save"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
