--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "popper.js": "^1.14.3",
     "scrollreveal": "^3.4.0",
     "sweetalert": "^2.1.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
