--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "meteor run --port 3005"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.51",
+    "@babel/runtime": "^7.24.4",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free": "^5.1.0",
     "@fortawesome/fontawesome-free-solid": "^5.0.9",
